--- a/GeoTracker-School_Project-/app/src/main/res/layout/fragment_route_detail.xml
+++ b/GeoTracker-School_Project-/app/src/main/res/layout/fragment_route_detail.xml
@@ -52,21 +52,32 @@
         android:layout_marginTop="3dp"
         android:textSize="20sp"/>
     <TextView
-    android:id="@+id/textDuration"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="3dp"
-    android:layout_marginTop="3dp"
-    android:textSize="20sp"/>
-
-    <Button
+        android:id="@+id/textDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/border_line"
         android:layout_marginLeft="3dp"
         android:layout_marginTop="3dp"
-        android:text="Share it!!"
-        android:id="@+id/btnShare"/>
+        android:textSize="20sp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_line"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="3dp"
+            android:text="Share it!!"
+            android:id="@+id/btnShare"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_line"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="3dp"
+            android:text="Delete"
+            android:id="@+id/btnDelete"/>
+    </LinearLayout>
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="275dp"
@@ -81,7 +92,6 @@
         android:layout_marginLeft="3dp"
         android:layout_marginTop="3dp"
         android:text="Rate this route"/>
-
     <RatingBar
         android:id="@+id/ratingBar"
         style="?android:attr/ratingBarStyle"
@@ -93,6 +103,5 @@
         android:clickable="true"
         android:focusable="true"
         android:numStars="5" />
-
 </LinearLayout>
 </ScrollView>
