--- a/GeoTracker-School_Project-/app/src/main/res/layout/dialog_layout.xml
+++ b/GeoTracker-School_Project-/app/src/main/res/layout/dialog_layout.xml
@@ -34,12 +34,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:text="Destination: " />
+
         <EditText
             android:id="@+id/txtDestinationDialog"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="7"
-            android:background="@null"/>
+            android:background="@null"
+            android:selectAllOnFocus="true" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,15 +53,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="Distance: " />
+            android:text="Note: " />
 
         <EditText
-            android:id="@+id/txtDistanceDialog"
+            android:id="@+id/txtNoteDialog"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="7"
-            android:focusable="false"
-            android:background="@null"/>
+            android:background="@null"
+            android:focusable="true"
+            android:selectAllOnFocus="true" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
